# phone-video-sync

./: .gitignore  LICENSE  README.md  config.yaml.example  phone-sync.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1
src/phone_video_sync/: __init__.py  __main__.py  adb.py  cli.py  config.py  db.py  ffmpeg.py  logging_setup.py  models.py  pipeline.py  report.py  report_export.py  select_ui.py  verify.py
src/phone_video_sync/adb/: __init__.py  client.py  listing.py  media.py  shell.py  transfer.py  types.py
src/phone_video_sync/pipeline/: __init__.py  cache.py  core.py  display.py  paths.py  probe.py
src/phone_video_sync/report/: __init__.py  export.py  format.py  grouping.py  meta.py  recommend.py  types.py
tests/: test_cache.py  test_config.py  test_db.py  test_mediastore.py  test_probe.py  test_report.py  test_report_export.py  test_verify.py
