[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-video-sync"
version = "0.1.0"
description = "Detect USB phone videos via ADB, compress with NVENC HEVC, verify, and sync back."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "phone-video-sync contributors" }]
keywords = ["adb", "ffmpeg", "nvenc", "hevc", "video", "phone", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
phone-sync = "phone_video_sync.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
